upload file to s3
