# internal/handlers/user.go
@@ -1,6 +1,10 @@
 package handlers
 
 import (
+	"fmt"
+	"net/http"
+
+	"github.com/Kimthean/go-chat/internal/utils"
 	"github.com/gin-gonic/gin"
 )
 
@@ -24,4 +28,43 @@ func GetUserDetails(g *gin.Context) {
 		"data":   user,
 		"userId": userId,
 	})
+}
+
+// UploadProfileImage godoc
+// @Summary upload profile image
+// @Tags user
+// @Produce  json
+// @Security Bearer
+// @Router /user/profile [post]
+// @Param file formData file true "Profile Image"
+func UploadProfileImage(g *gin.Context) {
+	// userId, _ := g.Get("userID")
+	// user, err := repository.GetUserByID(userId.(string))
+	// if err != nil {
+	// 	log.Fatal(err)
+	// }
+
+	// if user.ProfileImage != "" {
+	// 	err := utils.DeleteFileFromS3(user.ProfileImage)
+	// 	if err != nil {
+	// 		g.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to delete file"})
+	// 		return
+	// 	}
+
+	// }
+
+	file, err := g.FormFile("file")
+	if err != nil {
+		g.JSON(http.StatusBadRequest, gin.H{"error": "No file uploaded"})
+		return
+	}
+
+	err = utils.UploadFileToS3(file.Filename, "profile")
+	fmt.Println(err)
+	if err != nil {
+		g.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to upload file"})
+		return
+	}
+
+	g.JSON(http.StatusOK, gin.H{"message": "File uploaded successfully"})
 }
